--- a/assets/css/components/contact-block.css
+++ b/assets/css/components/contact-block.css
@@ -10,11 +10,17 @@
 @media (max-width: 480px) {
   .contact-element {
     display: flex;
+
+    justify-content: space-between;
+    gap: 32px;
+  }
+}
+@media (max-width: 320px) {
+  .contact-element {
     flex-direction: column;
     align-items: flex-start;
   }
 }
-
 .contact-label-row {
   display: flex;
   align-items: center;
