--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -46,7 +46,7 @@
   padding-inline: 30px;
   border-radius: 5px;
   text-align: center;
-  font-size: 2.4rem;
+  font-size: 1.8rem;
   text-decoration: none;
 
   background-color: var(--color-bg);
@@ -84,7 +84,7 @@
 }
 /* default title*/
 .title {
-  font-size: 3.6rem;
+  font-size: 3.8rem;
   padding: 16px;
   font-style: normal;
   color: var(--color-base);
@@ -97,7 +97,7 @@
 
 @media (min-width: 320px) {
   .container {
-    padding: 16px;
+    padding: 32px 16px;
   }
 }
 @media (min-width: 480px) {
@@ -106,6 +106,9 @@
   }
   .title {
     font-size: 4.8rem;
+  }
+  .button {
+    font-size: 2.4rem;
   }
 }
 @media (min-width: 1440px) {
