--- a/assets/css/page_elements/footer.css
+++ b/assets/css/page_elements/footer.css
@@ -7,20 +7,25 @@
   background-color: var(--color-base);
   padding: 8vmin 4vmin 4vmin;
   display: flex;
+  padding: 64px 16px;
   flex-direction: column;
   color: var(--color-bg);
+  gap: 32px;
 }
 
-@media (max-width: 768px) {
-  .footer-container {
-    align-items: center;
-  }
-}
 .footer-container {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-around;
   align-items: center;
+  gap: 48px;
+}
+@media (min-width: 480px) {
+  .footer-container {
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+  }
 }
 
 .footer-contact-container {
