--- a/assets/css/page_elements/header.css
+++ b/assets/css/page_elements/header.css
@@ -22,7 +22,7 @@
 }
 
 .nav li a {
-  font-size: 2.6rem;
+  font-size: 2.4rem;
   padding: 4px;
 }
 
