--- a/assets/css/pages/contact.css
+++ b/assets/css/pages/contact.css
@@ -5,9 +5,14 @@
 .contact-content {
   background-color: var(--color-base);
   color: var(--color-bg);
-  padding: 64px;
+  padding: 32px;
   min-height: 100vh;
-  
+}
+
+@media (min-width: 480px) {
+  .contact-content {
+    padding: 64px;
+  }
 }
 
 .contact-sides {
@@ -18,6 +23,7 @@
 
   gap: 80px;
 }
+
 .contact-banner {
   font-weight: var(--font-bold);
 }
@@ -25,13 +31,23 @@
 .line {
   display: none;
 }
+
 .contact-box {
   display: flex;
   align-items: center;
   flex-direction: column;
   gap: 64px;
-  font-size: 2.4rem;
+  font-size: 1.8rem;
 }
+
+@media (min-width: 480px) {
+  .contact-box {
+    .contact-box {
+      font-size: 2.4rem;
+    }
+  }
+}
+
 .contact-logo {
   width: 24vh;
 }
